0.10
DVD writing support with growisofs
CD Cloning with cdrtools >= 2.01a17
device capabilities detection without cdrecord. This solves the long startup problem with ATAPI devices.
moved audio ripping pattern configuration from options dialog to audio ripping dialog

0.9
support for eMovix 0.8.0rc2
better data project size calculation

0.9pre2
support for writing CD-Text with cdrecord
support for writing audio and mixed-mode CDs on-the-fly with cdrecord >= 2.01a13
no gui blocking when reloading the media while writing a two-session mixed-mode cd
nodma option in eMovix project
fixed problems with audio decoding (the process sometimes stalled)

0.9pre1	
added system notification
added eMovix project
added bootable cd support (multible images)
K3b now allows automatic writing mode selection to be sure to always use the best writing mode (DAO, TAO)
the environment PATH is searched for external bins
more error handling
dropped KDE/QT 3.0.x compatibility, now K3b requires at least 3.1
internals:
  devices rewrite, use generic packet ioctl's
  cdinfo rewrite, use generic packet ioctl's
  merged cdrdaoparser and cdrdaowriter
added multisession cd copy
fixed onlyCreateImage (this time for real!)
added option to hide main window while writing
fixed temp-dir problems with nfs-mounted home directories
   K3b now uses the default kde tempdir
Resmgr support
added user datamode selection (mode1, mode2(form1))
support for relative paths in playlists (thanx to Nick Bloke)
new progressdialog
faster cddb access (older versions just queried all entries, now only the selected one gets queried)
K3b is now threaded.
Gui beautifying.
videocd:
   add playback control (PBC)
	 add customizing of Gaps and Margins
   add HQ-VIDEOCD support
   add relaxed APS support (this controls whether APS constraints are strict or relaxed)
   add category restriction support
   add an option to create always an empty `/SEGMENT' directory (some Players need this)
   fixed load and saveUserDefaults